@@ -28,7 +28,7 @@
  * Restlet is a registered trademark of Noelios Technologies.
  */
 
-package org.restlet.ext.lucene;
+package org.restlet.ext.lucene.internal;
 
 import java.io.IOException;
 import java.io.InputStream;
